--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .banner-overlay {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(255,255,255, 0.4) 0%, rgba(255,255,255,0) 50%, rgba(148,187,233,0) 100%);
+  }
+}
